<resources>
    <string name="app_name" translatable="false">Til Havs</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="zero_number">0</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update">Update</string>
    <string name="no_internet_access">No internet access</string>
    <string name="util_storage_settings_disabled">Storage access</string>
    <string name="util_storage_enable_question">Til Havs needs access to device storage in order to upload images. Do you want to grant this access?</string>
    <string name="user_profile_title">Vessels and profile</string>
    <string name="preferences_title">Preferences</string>
    <string name="tools_title">Tools</string>
    <string name="overview_title">Overview</string>
    <string name="proto_open_drawer">Open drawer</string>
    <string name="proto_close_drawer">Close drawer</string>
    <string name="snap_title">SnapFish demo</string>
    <string name="catch_analysis_title">Catch Analysis</string>
    <string name="sprice_menu_title" translatable="false">SPRICE</string>
    <string name="map_title">Map</string>
    <string name="pref_snap_api_server_address" translatable="false">pref_snap_api_server_address</string>
    <string name="pref_snap_web_server_address" translatable="false">pref_snap_web_server_address</string>
    <string name="pref_user_identity" translatable="false">pref_user_identity</string>
    <string name="pref_user_id" translatable="false">pref_user_id</string>
    <string name="pref_snap_enable_service" translatable="false">pref_snap_enable_service</string>
    <string name="pref_contact_person_email" translatable="false">pref_contact_person_email</string>
    <string name="pref_contact_person_name" translatable="false">pref_contact_person_name</string>
    <string name="pref_contact_person_phone" translatable="false">pref_contact_person_phone</string>
    <string name="pref_tool_type" translatable="false">pref_tool_type</string>
    <string name="pref_coordinate_format" translatable="false">pref_coordinate_format</string>
    <string name="pref_tool_days_before_old" translatable="false">pref_tool_days_before_old</string>
    <string name="pref_tool_count" translatable="false">pref_tool_count</string>
    <string name="pref_map_selected_layers" translatable="false">pref_map_selected_layers</string>
    <string name="pref_sprice_enable_service_key" translatable="false">pref_sprice_enable_service_key</string>
    <string name="pref_sprice_username_key" translatable="false">pref_sprice_username_key</string>
    <string name="pref_sprice_password_key" translatable="false">pref_sprice_password_key</string>
    <string name="pref_sprice_call_sign_key" translatable="false">pref_sprice_call_sign_key</string>
    <string name="catch_analysis_url" translatable="false">https://www.fangstanalyse.no/</string>
    <string name="tool_legend">Legend for tools</string>
    <string name="map_update_button">Update map</string>
    <string name="map_zoom_button">Zoom to my position</string>
    <string name="map_export_metadata">Download map layer</string>
    <string name="map_symbol_explanation">Legend for tools</string>
    <string name="set_alert_watcher">Set collision warnings</string>
    <string name="choose_map_layers">Choose map layer</string>
    <string name="menu_search_tools">Search tools</string>
    <string name="map_vessel_search_hint">Call signal / vessel name</string>
    <string name="login_remember_login">Remember me</string>
    <string name="login_prompt_email">Email</string>
    <string name="login_prompt_password">Password</string>
    <string name="login_action_sign_in_short">Log in</string>
    <string name="login_action_sign_in">Log in</string>
    <string name="login_action_forgot_password">Forgotten password</string>
    <string name="login_action_sign_up">Register user</string>
    <string name="login_error_incorrect_password">Wrong password</string>
    <string name="login_action_terms_and_consent">Terms and consent</string>
    <string name="tool_type_code_nets">Net</string>
    <string name="tool_type_code_longline">Longline</string>
    <string name="tool_type_code_crabpot">Crab pot</string>
    <string name="tool_type_code_danpurseine">Danish purseine</string>
    <string name="tool_type_code_mooring">Mooring system</string>
    <string name="tool_type_code_sensor_cable">Sensor / cable</string>
    <string name="tool_type_code_unknown">Unknown tool</string>
    <string name="positions">Positions</string>
    <string name="position">Position</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="coordinates_help_text">Coordinate format is <b>%1$s</b>. You can change this in preferences.\nYou can add and remove positions with the buttons to the right.</string>
    <string name="degrees_minutes_seconds">Degrees, minutes, seconds</string>
    <string name="degrees_decimal_minutes">Degrees, decimal minutes</string>
    <string name="symbol_geographical_degrees">°</string>
    <string name="symbol_geographical_minutes">’</string>
    <string name="symbol_geographical_seconds">\"</string>
    <string name="coordinate_format">Coordinate format</string>
    <string name="cardinal_direction_symbol_north">N</string>
    <string name="cardinal_direction_symbol_south">S</string>
    <string name="cardinal_direction_symbol_west">W</string>
    <string name="cardinal_direction_symbol_east">E</string>
    <string name="get_current_position_button_description">Get gps position</string>
    <string name="add_position_button_description">Add additional position</string>
    <string name="remove_position_button_description">Remove last position</string>
    <string name="tool_deployment_sent">Tool deployment sent!</string>
    <string name="tool_deployment_error">\"Tool deployment error: \"</string>
    <string name="tool_report_not_complete">Tool report or profile not complete</string>
    <string name="tool_edit_location">Edit location</string>
    <string name="tool_list_profile_warning">The user profile must be completed before tools can be added. See settings.</string>
    <string name="tool_report_retrieval_heading">\"Report retrieval of \"</string>
    <string name="tool_report_retrieval_message">Please enter a comment if the tool is lost or if the retrieval was overdue</string>
    <string name="tool_report_retrieval_message_confirm">Are you sure you want to report this tool as retrieved?</string>
    <string name="util_gps_settings_disabled">Gps Disabled</string>
    <string name="util_gps_enable_question">gps is not enabled . do you want to enable?</string>
    <string name="util_value_must_be_in_range">Value must be in range </string>
    <string name="util_range_to_separator">\" to \"</string>
    <string name="echogram_snap_title_or_other_main_aspect" translatable="false">Snap title or other main aspect</string>
    <string name="echogram_date_and_time_or_other_first_detail" translatable="false">Date and time or other first detail</string>
    <string name="echogram_position_or_other_second_detail" translatable="false">Position or other second detail</string>
    <string name="til_havs_header">Til Havs</string>
    <string name="one_stop_shop_header">One-stop-shop</string>
    <string name="snap_from">From</string>
    <string name="snap_to">To</string>
    <string name="snap_message">Message</string>
    <string name="snap_share_with">Share with</string>
    <string name="snap_share_publicly_with_everyone">Share publicly (with everyone)</string>
    <string name="tool_time">Time</string>
    <string name="tool_tool_type">Tool type</string>
    <string name="tool_tool_count">Tool count</string>
    <string name="tool_tool_count_length">Length</string>
    <string name="tool_comment">Comment</string>
    <string name="profile_title">Profile</string>
    <string name="prefs_contact_email">Contact person e-mail</string>
    <string name="prefs_contact_name">Contact person name</string>
    <string name="prefs_contact_phone">Contact person phone</string>
    <string name="prefs_coordinate_format">Coordinate format</string>
    <string name="pref_default_tool_type">Default tool type</string>
    <string name="pref_default_tool_length">Default tool count or length (m)</string>
    <string name="prefs_enable_snapfish">Enable SnapFish demo</string>
    <string name="prefs_snap_api_server">SnapFish API server</string>
    <string name="prefs_snap_web_server">SnapFish web server</string>
    <string name="prefs_snap_user_email">SnapFish user e-mail</string>
    <string name="prefs_snap_user_id">SnapFish user id</string>
    <string name="prefs_other_settings">Other settings</string>
    <string name="prefs_remember_login">Remember login information</string>
    <string name="prefs_conditions_for_use">Conditions for use and consent</string>
    <string name="prefs_conditions_for_use_summary">Conditions, privacy, etc</string>
    <string name="fragment_title_tools">Tools</string>
    <string name="fragment_title_map">Map</string>
    <string name="fragment_title_tool_details">Tool Details</string>
    <string name="fragment_title_overview">Til Havs Overview</string>
    <string name="fragment_title_snapfish">SnapFish</string>
    <string name="fragment_title_sprice" translatable="false">SPRICE</string>
    <string name="fragment_title_user_profile">User Profile</string>
    <string name="fragment_title_user_preferences">Preferences</string>
    <string name="fragment_title_snap_editor">New Snap Message</string>
    <string name="fragment_title_snap_detail">Snap Message</string>
    <string name="fragment_title_login">Til Havs Login</string>
    <string name="fragment_title_analysis">Catch Analysis</string>
    <string name="fragment_title_echogram_viewer">Echogram Viewer</string>
    <string name="fragment_title_deployment_editor">Report Tool</string>
    <string name="fragment_title_consent">Consent to terms of use</string>
    <string name="tool_setup_date">Setup date</string>
    <string name="icing_type_code_light_icing">Light icing (0,05 – 0.5 cm/h)</string>
    <string name="icing_type_code_moderate_icing">Light icing (0,5 – 1.34 cm/h)</string>
    <string name="icing_type_code_heavy_icing">Heavy icing (over 1.34 cm/h)</string>
    <string name="wind_type_code_light_wind">Light wind (0 – 3 m/s)</string>
    <string name="wind_type_code_moderate_wind">Light wind (3 – 7 m/s)</string>
    <string name="wind_type_code_heavy_wind">Heavy wind (over 7 m/s)</string>
    <string name="enum_not_selected">Not selected</string>
    <string name="max_middle_wind_time_0">0: during observation</string>
    <string name="max_middle_wind_time_1">1: 0–1 hour from obs</string>
    <string name="max_middle_wind_time_2">2: 1–2 hours from obs</string>
    <string name="max_middle_wind_time_3">3: 2–3 hours from obs</string>
    <string name="max_middle_wind_time_4">4: 3–6 hours from obs</string>
    <string name="max_middle_wind_time_5">5: 6–9 hours from obs</string>
    <string name="max_middle_wind_time_6">6: 9–12 hours from obs</string>
    <string name="max_middle_wind_time_7">7: Wind seems to dissipate</string>
    <string name="max_middle_wind_time_8">8: Wind seems unchanged</string>
    <string name="icing_icing_type">Icing type</string>
    <string name="icing_report_date">Date</string>
    <string name="icing_report_time">Time</string>
    <string name="sprice_icing_report_list_item_image_description">Image from the report if exists.</string>
    <string name="sprice_icing_report_list_item_placeholder_title">yyyy-MM-dd hh:mm:ss</string>
    <string name="sprice_icing_report_list_item_placeholder_info">Rapportinformasjon</string>
</resources>