<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/primary">
        <item
            android:id="@id/overview_fragment"
            android:icon="@drawable/ic_home"
            android:title="@string/overview_title" />
        <item
            android:id="@id/map_fragment"
            android:icon="@drawable/ic_map"
            android:title="@string/map_title" />
        <item
            android:id="@id/tools_fragment"
            android:icon="@drawable/ic_hook"
            android:title="@string/tools_title" />
        <item
            android:id="@id/snap_fragment"
            android:icon="@drawable/ic_snap"
            android:title="@string/snap_title" />

    </group>
    <!-- TODO STEP 9.8 - Add a menu item for settings_fragment -->
    <item
        android:id="@id/user_profile_fragment"
        android:icon="@drawable/ic_vessel"
        android:title="@string/user_profile_title" />
    <item
        android:id="@id/preferences_fragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/preferences_title" />
</menu>