<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="no.sintef.fiskinfo.util.UtilsKt" />

        <import type="android.text.InputType" />

        <variable
            name="reporticingviewmodel"
            type="no.sintef.fiskinfo.ui.sprice.ReportIcingViewModel" />
    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        tools:context=".ui.map.MapFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/icingDetailsDateLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/icing_report_date"
                        app:startIconContentDescription="@string/proto_close_drawer"
                        app:startIconDrawable="@drawable/ic_date">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/icingReportDateField"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:inputType="@{InputType.TYPE_NULL}"
                            android:text="@{UtilsKt.formatDate(reporticingviewmodel.reportingTime)}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:hint="@string/icing_report_time"
                        app:startIconContentDescription="@string/proto_close_drawer"
                        app:startIconDrawable="@drawable/ic_time">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/icingReportTimeField"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:inputType="@{InputType.TYPE_NULL}"
                            android:text="@{UtilsKt.formatTime(reporticingviewmodel.reportingTime)}" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin_small"
                        android:hint="@string/icing_icing_type"
                        app:startIconContentDescription="@string/proto_close_drawer"
                        app:startIconDrawable="@drawable/ic_icing_24">

                        <AutoCompleteTextView
                            android:id="@+id/icingDetailsTypeField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:inputType="@{InputType.TYPE_NULL}"
                            android:text="@{reporticingviewmodel.icingTypeCodeName}" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/relativeLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/positions_label"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/position"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@+id/icingReportPositionRecyclerView"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/icingReportPositionRecyclerView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:listitem="@layout/location_list_item"></androidx.recyclerview.widget.RecyclerView>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>